--- a/Carolina /web_page/link_options.html
+++ b/Carolina /web_page/link_options.html
@@ -3,7 +3,7 @@
 <!DOCTYPE html>
 	<html>
 	  <head>
-	    <title>Website Layout</title>
+	    <title>Links</title>
 	    <script src="http://d3js.org/d3.v3.min.js" charset="utf-8"></script>
    		<link type="text/css" rel="stylesheet" href="style.css"/>
 	  </head>
